--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
+  <body><div class="search-bar">
+    <input type="text" id="search-input" placeholder="Buscar productos">
+    <button id="search-button">Buscar</button>
+  </div>
+  
     <div>
       <h2>Productos</h2>
     </div>
     <ul id="product-list">
       <!-- los prodcutos se muestran aca -->
     </ul>
-   
+
 <div id="carrito">
   <h2>Carrito de Compras</h2><a class="comprasClass" href="carrito.html">Ir al carrito</a>
   <ul id="carrito-list"></ul>
